--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,12 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
 
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.22'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.8.20'
 }
 
 android {
     namespace 'com.example.myparty'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.myparty"
@@ -32,18 +32,22 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    viewBinding{
+        enable = true
+    }
 }
 
 dependencies {
     implementation platform("io.github.jan-tennert.supabase:bom:2.2.2")
     implementation 'io.github.jan-tennert.supabase:postgrest-kt'
 
-    implementation 'io.ktor:ktor-client-[engine]:2.3.9'
+    implementation("io.ktor:ktor-client-cio:2.3.9")
+    implementation "io.github.jan-tennert.supabase:storage-kt"
 
-
-    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
