--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,10 +40,14 @@ android {
 
 dependencies {
     implementation platform("io.github.jan-tennert.supabase:bom:2.2.2")
-    implementation 'io.github.jan-tennert.supabase:postgrest-kt'
-
     implementation("io.ktor:ktor-client-cio:2.3.9")
+    implementation 'io.github.jan-tennert.supabase:postgrest-kt'
     implementation "io.github.jan-tennert.supabase:storage-kt"
+
+    implementation "com.mikepenz:fastadapter:5.7.0"
+    implementation "com.mikepenz:fastadapter-extensions-expandable:5.7.0"
+    implementation "com.mikepenz:fastadapter-extensions-binding:5.7.0"
+    implementation "com.mikepenz:fastadapter-extensions-diff:5.7.0"
 
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
