--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,15 @@
         android:theme="@style/Base.Theme.MyParty"
         tools:targetApi="31">
         <activity
-            android:name=".EditProfileActivity"
+            android:name=".CreateProfileActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
-            android:exported="false" />
+            android:theme="@style/Activity"/>
+        <activity
+            android:name=".EditProfileActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Activity" />
         <activity
             android:name=".AddPartyActivity"
             android:exported="false"
