--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,20 @@
         android:theme="@style/Base.Theme.MyParty"
         tools:targetApi="31">
         <activity
-            android:name=".CreateProfileActivity"
-            android:exported="false"
-            android:screenOrientation="portrait"
-            android:theme="@style/Activity"/>
+            android:name=".AdminActivity"
+            android:exported="false" />
         <activity
-            android:name=".EditProfileActivity"
+            android:name=".StartActivities.CreateProfileActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/Activity" />
         <activity
-            android:name=".AddPartyActivity"
+            android:name=".Profile.EditProfileActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Activity" />
+        <activity
+            android:name=".AddParty.AddPartyActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/Activity" />
@@ -35,7 +38,7 @@
             android:screenOrientation="portrait"
             android:theme="@style/Activity" />
         <activity
-            android:name=".SplashScreenActivity"
+            android:name=".StartActivities.SplashScreenActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/SplashScreen">
@@ -50,12 +53,12 @@
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".RegistrationActivity"
+            android:name=".StartActivities.RegistrationActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/Activity" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".StartActivities.LoginActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/Activity" />
