--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,12 @@ android {
     viewBinding{
         enable = true
     }
+
+    buildscript {
+        repositories {
+            mavenCentral()
+        }
+    }
 }
 
 dependencies {
@@ -45,6 +51,8 @@ dependencies {
     implementation "io.github.jan-tennert.supabase:storage-kt"
 
     implementation 'com.google.android.material:material:1.13.0-alpha02'
+
+    implementation 'com.faltenreich:skeletonlayout:5.0.0'
 
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
