--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,17 @@
         android:theme="@style/Base.Theme.MyParty"
         tools:targetApi="31">
         <activity
-            android:name=".EditPartyActivity"
+            android:name=".Profile.EditPartyActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/Activity"/>
         <activity
-            android:name=".ProfileOrganizatorActivity"
+            android:name=".ProfileOrganizator.ProfileOrganizatorActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/Activity"/>
         <activity
-            android:name=".FilterActivity"
+            android:name=".Main.FilterActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/Activity"
