--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,18 @@
         android:theme="@style/Base.Theme.MyParty"
         tools:targetApi="31">
         <activity
+            android:name=".StartActivities.RulesActivity"
+            android:exported="false" />
+        <activity
             android:name=".Profile.EditPartyActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Activity"/>
+            android:theme="@style/Activity" />
         <activity
             android:name=".ProfileOrganizator.ProfileOrganizatorActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Activity"/>
+            android:theme="@style/Activity" />
         <activity
             android:name=".Main.FilterActivity"
             android:exported="false"
