--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         tools:targetApi="31">
         <activity
             android:name=".StartActivities.RulesActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Activity"/>
         <activity
             android:name=".Profile.EditPartyActivity"
             android:exported="false"
