--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
 
     implementation 'com.faltenreich:skeletonlayout:5.0.0'
 
+    implementation("com.github.skydoves:balloon:1.6.4")
+
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
