--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,15 @@
         android:theme="@style/Base.Theme.MyParty"
         tools:targetApi="31">
         <activity
-            android:name=".Admin.AdminPartyActivity"
+            android:name=".Admin.AdminUserActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/Activity"/>
+        <activity
+            android:name=".Admin.AdminPartyActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Activity" />
         <activity
             android:name=".StartActivities.RulesActivity"
             android:exported="false"
